--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -17,7 +17,7 @@
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734241.md#1" target="_blank">常忍：法庭上的正义之声</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/20/n11734241.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_59193608_Subscription_L-600x400-150x120.jpg" align ="left"></a>明慧网报导，近期有位律师在法庭上为法轮功学员做无罪辩护，被法官多次打断和阻止。律师反问：“哪条规定不可做无罪辩护？”法官说：“国务院。”律师依照《律师法》、《刑事诉讼法》的相关规定，驳斥了法官的无理要求。律师指出，当事人是因为信仰法轮功而被抓，没有触犯任何法律，所以我要做的是无罪辩护。法庭内鸦雀无声。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:01 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733423.md#1" target="_blank">周晓辉：莱特希泽话中有话与高校章程变脸</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11733423.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1172509081-600x400-150x120.jpg" align ="left"></a>中共对全社会推行的强力控制，其实已经在向外界传递了一个明晰的信号，那就是在中共内部，改革派已在很多方面受挫，中共高层对外释放的都是“左转”、走回头路的信号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 4:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11732234.md#1" target="_blank">东方觉：注水式统计与数字游戏</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11732234.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/131faa4a41c267bb0e2416d0b6e5ea7a-150x120.jpg" align ="left"></a>已近年终，各级政府官员紧张忙碌起来，特别是反映政绩的总结报告和各类统计报表，最为重要，也最伤领导脑筋：报告内容如何添彩，统计数字如何注水，那可是大有“学问”、大有文章可作的。尤其那些统计数字，它关系到指标任务的完成、政绩的优劣与官位的升降变化，万万马虎不得。你可知道那“数字出官员，官员出数字”呢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 7:09 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11732228.md#1" target="_blank">杨宁：美国严控签证 替中共效命者要三思</a><br></h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/19/n11732228.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-143452837-600x400-1-150x120.jpg" align ="left"></a>越来越多为中共效命者赴美被拒签，无疑是对那些仍忠心耿耿听从中共指令的官员、学者、媒体从业者、司法人员等的警示，也是在给他们机会三思。如果他们继续一条道紧跟着中共走到黑，那未来就不仅仅是签证被拒签那么简单了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月19日 5:08 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737735.md#1" target="_blank">金浴凤：林郑之夫的渊默</a><br></h3>泪珠满江皆是恨，失魄无依何处沦？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 6:59 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737715.md#1" target="_blank">理悟：叹私企</a><br></h3>可怜私企被党欺，命如风筝任党戏。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 6:36 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/21/n11737704.md#1" target="_blank">廖祖笙：全面失控可能袭向习近平</a><br></h3>全面失控可能袭向习近平，这不是危言耸听，而是有种种显见的迹象......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 6:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ripamf2991/djy/blob/master/gb/19/12/6/n11706339.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（10）</a><br></h3>亚氏逻辑学与近代科学的实证方法是密切相关的。近代科学各门学科的实验和观察基本上可以归结为如下的过程：确定一对实验或观察对象和观察者，以及对象和观察者之间的某种作用——观察方式，所有的观察都可以用这种抽象的作用来表述。可以用定量方式描述的观察实际上是针对一种非常特殊的{对象，观察者，作用}的组合。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 2:57 AM			</td></tr>
